--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <h1>Tetris Gold Edition</h1>
 
   <div class="grid">
+    <div id="message">
+      <button id="play-button">Play?</button>
+    </div>
   </div>
 
 </body>
