--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 </head>
 <body>
 
+  <div class="bg">
+
   <h1>Tetris Gold Edition</h1>
 
-  <div class="grid">
-    <div id="message">
-      <button id="play-button">Play?</button>
+    <div class="grid">
+      <div id="message">
+        <button id="play-button">Play?</button>
+      </div>
     </div>
+
   </div>
 
 </body>
