--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
   <h1>Tetris Gold Edition</h1>
 
+    <div class="controls">
+      <h2>Controls</h2>
+      <ul>
+        <li>Use arrow keys to move a piece left, right, or to drop down faster.</li>
+        <li>Press "Z" to flip a piece counterclockwise.</li>
+        <li>Press "X" to flip a piece clockwise.</li>
+      </ul>
+    </div>
+
     <div class="grid">
       <div id="message">
         <button id="play-button">Play?</button>
