--- a/index.html
+++ b/index.html
@@ -12,26 +12,31 @@
 </head>
 <body>
 
-  <div class="bg">
+<div class="grid-container">
 
   <h1>Tetris Gold Edition</h1>
 
-    <div class="controls">
-      <h2>Controls</h2>
-      <ul>
-        <li>Use arrow keys to move a piece left, right, or to drop down faster.</li>
-        <li>Press "Z" to flip a piece counterclockwise.</li>
-        <li>Press "X" to flip a piece clockwise.</li>
-      </ul>
-    </div>
-
-    <div class="grid">
-      <div id="message">
-        <button id="play-button">Play?</button>
-      </div>
-    </div>
-
+  <div class="controls">
+    <h2>Controls</h2>
+    <ul>
+      <li>Use arrow keys to move a piece left, right, or to drop down faster.</li>
+      <li>Press "Z" to flip a piece counterclockwise.</li>
+      <li>Press "X" to flip a piece clockwise.</li>
+    </ul>
   </div>
+
+  <div class="score">
+    <h2>Score</h2>
+    <p>0</p>
+  </div>
+
+  <div class="grid">
+    <div id="message">
+      <button id="play-button">Play?</button>
+    </div>
+  </div>
+
+</div>
 
 </body>
 </html>
