--- a/index.html
+++ b/index.html
@@ -32,7 +32,24 @@
 
   <div class="grid">
     <div id="message">
-      <button id="play-button">Play?</button>
+      <p>Select initial difficulty!</p>
+      <p>
+        <select id="initDiff" class="dropdown">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5" selected>5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+        </select>
+      </p>
+      <p>
+        <button id="play-button" class="btn">Let's Play<br>
+        Some Tetris!</button>
+      </p>
     </div>
   </div>
 
