--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         </select>
       </p>
       <p>
-        <button id="play-button" class="btn">Let's Play<br>
-        Some Tetris!</button>
+        <button id="play-button" class="btn">Let's Play Some Tetris!</button>
       </p>
     </div>
   </div>
